--- a/healthcare_ms/templates/ehr/medical_record_detail.html
+++ b/healthcare_ms/templates/ehr/medical_record_detail.html
@@ -11,10 +11,12 @@
             <p class="text-gray-600">Patient: {{ record.patient.get_full_name }}</p>
         </div>
         <div class="flex space-x-2">
+            {% if request.user.user_type != 'patient' %}
             <a href="{% url 'ehr:medical-record-update' record.guid %}"
                class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors">
                 Edit Record
             </a>
+            {% endif %}
             <a href="{% url 'ehr:medical-record-list' %}"
                class="bg-gray-600 text-white px-4 py-2 rounded-lg hover:bg-gray-700 transition-colors">
                 Back to List
